# pilar

./: .gitignore  CMakeLists.txt  README.md  build.sh  classifier.py  main.py  opencv_text_detection_image.py  package-lock.json  req.txt  requirements.txt  run-cli.sh  run-web.bat  run-web.sh  run.bat  run.sh  setup_env.py  svm_models.sav
c-porting/: CMakeLists.txt  FrameExtractor.cpp  Pipeline.cpp  README.md  SubtitleCropper.cpp  SummaryGenerator.cpp  main.cc  main.py
docs/: features.md
include/pilar/: Config.h  FrameExtractor.h  Pipeline.h  SubtitleCropper.h  SummaryGenerator.h  VideoDownloader.h
pilar/: __init__.py
pilar/utils/: .downloader.py.un~  __init__.py  downloader.py  downloader.py~  image_processor.py  image_uploader.py  ocr_engine.py  smart_thumbs.py
pilar/web/: server.py  wsgi.py
scripts/: kakao_admin_uploader.py  kakao_upload_button.py  mkdaily.py
src/: VideoDownloader.cpp  clear_and_extract.sh  get_url.py  main.cpp
tests/: test_img_similarity.py  test_similarity.py
